[package]
name = "procmaps"
version = "0.6.0"
authors = ["William Woodruff <william@yossarian.net>"]
edition = "2018"
description = "Python bindings for procmaps.rs"
homepage = "https://github.com/woodruffw/procmaps.py"
repository = "https://github.com/woodruffw/procmaps.py"
readme = "README.md"
license = "MIT"

[package.metadata.release]
dev-version = false
publish = false # handled by GitHub Actions
push = true

[package.metadata.maturin]
classifier = [
  "Programming Language :: Rust",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
pyo3 = { version = "0.17", features = ["extension-module", "abi3", "abi3-py37"] }
rsprocmaps = "0.3"
